# msic

./: .editorconfig  .gitignore  README.md  pyproject.toml
msic/: __init__.py  __main__.py  compress.py  copy.py  msic.py  playlist.py  util.py
msic/audio/: __init__.py  copy.py  playlist.py
msic/plex/: __init__.py
